fix navbar-brand margin on mobile

--- a/index.css
+++ b/index.css
@@ -53,6 +53,7 @@ section {
 
 .navbar-brand {
     padding: 0;
+    margin: 0;
 }
 
 #contact {
